Translated on translate.pretix.eu (German)
Currently translated at 100.0% (2260 of 2260 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/de/

powered by weblate

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,10 +5,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-26 12:49+0000\n"
-"PO-Revision-Date: 2018-03-26 11:42+0000\n"
+"PO-Revision-Date: 2018-03-26 13:12+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
-"Language-Team: German <https://translate.pretix.eu/projects/pretix/pretix/de/"
-">\n"
+"Language-Team: German "
+"<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1382,8 +1382,6 @@ msgid "Question"
 msgstr "Frage"
 
 #: pretix/base/models/items.py:669
-#, fuzzy
-#| msgid "Internal reference"
 msgid "Internal identifier"
 msgstr "Interne Referenz"
 
@@ -2263,16 +2261,13 @@ msgid "Order {order.code} has been canceled."
 msgstr "Bestellung {order.code} wurde storniert."
 
 #: pretix/base/notifications.py:210
-#, fuzzy
-#| msgid "Cart expired"
 msgid "Order expired"
-msgstr "Warenkorb abgelaufen"
+msgstr "Bestellung abgelaufen"
 
 #: pretix/base/notifications.py:211
-#, fuzzy, python-brace-format
-#| msgid "Order {order.code} has been marked as paid."
+#, python-brace-format
 msgid "Order {order.code} has been marked as expired."
-msgstr "Bestellung {order.code} wurde als bezahlt markiert."
+msgstr "Bestellung {order.code} wurde als abgelaufen markiert."
 
 #: pretix/base/notifications.py:216
 msgid "Order information changed"
@@ -2686,10 +2681,8 @@ msgstr ""
 "12345 Musterdorf"
 
 #: pretix/base/services/invoices.py:272
-#, fuzzy
-#| msgid "Sample product A"
 msgid "Sample product {}"
-msgstr "Beispielprodukt A"
+msgstr "Beispielprodukt {}"
 
 #: pretix/base/services/invoices.py:278
 msgid "Sample product A"
@@ -6555,10 +6548,8 @@ msgstr ""
 "Zahlungsplugins."
 
 #: pretix/control/templates/pretixcontrol/event/payment.html:48
-#, fuzzy
-#| msgid "General settings"
 msgid "General payment settings"
-msgstr "Allgemeine Einstellungen"
+msgstr "Allgemeine Zahlungseinstellungen"
 
 #: pretix/control/templates/pretixcontrol/event/payment_provider.html:12
 #: pretix/control/templates/pretixcontrol/events/create_base.html:23
@@ -6566,38 +6557,23 @@ msgid "Back"
 msgstr "Zurück"
 
 #: pretix/control/templates/pretixcontrol/event/payment_provider.html:14
-#, fuzzy
-#| msgid "Payment provider"
 msgid "Payment provider:"
-msgstr "Zahlungsmethode"
+msgstr "Zahlungsmethode:"
 
 #: pretix/control/templates/pretixcontrol/event/payment_provider.html:21
 msgid "Warning:"
 msgstr "Warnung:"
 
 #: pretix/control/templates/pretixcontrol/event/payment_provider.html:22
-#, fuzzy
-#| msgid ""
-#| "Please note that EU Directive 2015/2366 bans surcharging payment fees for "
-#| "most common payment methods within the European Union. Depending on the "
-#| "payment method, this might affect selling to consumers only or to "
-#| "business customers as well. Depending on your country, this legislation "
-#| "might already be in effect or become relevant from January 2018 at the "
-#| "latest. This is not legal advice. If in doubt, consult a lawyer or "
-#| "refrain from charging payment fees."
 msgid ""
 "Please note that EU Directive 2015/2366 bans surcharging payment fees for "
 "most common payment methods within the European Union. If in doubt, consult "
 "a lawyer or refrain from charging payment fees."
 msgstr ""
 "Durch EU-Richtlinie 2015/2366 wird das Erheben von Zahlungsmittelgebühren "
-"für übliche Zahlungsmethoden innerhalb der Europäischen Union verboten. "
-"Abhängig von der Zahlungsmethode kann dies nur für den Handel mit "
-"Verbrauchen oder auch für gewerbliche Kunden gelten. Abhängig von dem Staat, "
-"in dem Sie operieren, kann diese Gesetzgebung bereits in Kraft sein oder bis "
-"spätestens Januar 2018 in Kraft treten. Dieser Hinweis stellt keine "
-"Rechtsberatung dar. Im Zweifel kontaktieren Sie bitte einen Anwalt oder "
-"verzichten auf die Erhebung von Zahlungsmittelgebühren."
+"für übliche Zahlungsmethoden innerhalb der Europäischen Union verboten. Im "
+"Zweifel kontaktieren Sie bitte einen Anwalt oder verzichten auf die Erhebung "
+"von Zahlungsmittelgebühren."
 
 #: pretix/control/templates/pretixcontrol/event/payment_provider.html:28
 msgid ""
@@ -10983,16 +10959,12 @@ msgstr ""
 "erstellen, oder pretix mit einem bestehenden Stripe-Konto verknüpfen."
 
 #: pretix/plugins/stripe/payment.py:73
-#, fuzzy
-#| msgid "Connect with pretixdesk"
 msgid "Connect with Stripe"
-msgstr "Mit pretixdesk verbinden"
+msgstr "Mit Stripe verbinden"
 
 #: pretix/plugins/stripe/payment.py:83
-#, fuzzy
-#| msgid "Bancontact via Stripe"
 msgid "Disconnect from Stripe"
-msgstr "Bancontact über Stripe"
+msgstr "Verbindung mit Stripe trennen"
 
 #: pretix/plugins/stripe/payment.py:87
 msgid ""
@@ -11007,10 +10979,8 @@ msgstr ""
 "wird und zur Verarbeitung asynchroner Zahlungsmethoden wie SOFORT."
 
 #: pretix/plugins/stripe/payment.py:101
-#, fuzzy
-#| msgid "Stripe Checkout"
 msgid "Stripe account"
-msgstr "Stripe Checkout"
+msgstr "Stripe-Konto"
 
 #: pretix/plugins/stripe/payment.py:109
 msgctxt "stripe"
@@ -11018,11 +10988,9 @@ msgid "Live"
 msgstr "Live"
 
 #: pretix/plugins/stripe/payment.py:110
-#, fuzzy
-#| msgid "Question"
 msgctxt "stripe"
 msgid "Testing"
-msgstr "Frage"
+msgstr "Test-System"
 
 #: pretix/plugins/stripe/payment.py:120
 msgid "Publishable key"
@@ -11251,10 +11219,8 @@ msgid "Stripe Connect: Secret key"
 msgstr "Stripe Connect: Geheimer Schlüssel"
 
 #: pretix/plugins/stripe/signals.py:113
-#, fuzzy
-#| msgid "Publishable key"
 msgid "Stripe Connect: Publishable key"
-msgstr "Veröffentlichbarer Schlüssel"
+msgstr "Stripe Connect: Veröffentlichbarer Schlüssel"
 
 #: pretix/plugins/stripe/signals.py:120
 msgid "Stripe Connect: Secret key (test)"
@@ -11432,16 +11398,14 @@ msgstr "Unbekannter Grund"
 
 #: pretix/plugins/stripe/views.py:51 pretix/plugins/stripe/views.py:57
 #: pretix/plugins/stripe/views.py:83
-#, fuzzy
-#| msgid "An error occured during the HBCI transaction."
 msgid "An error occured during connecting with Stripe, please try again."
-msgstr "Während der HBCI-Transaktion ist ein Fehler aufgetreten auf."
+msgstr ""
+"Während der Verbindung mit Stripe ist ein Fehler aufgetreten, bitte "
+"versuchen Sie es erneut."
 
 #: pretix/plugins/stripe/views.py:86
-#, fuzzy
-#| msgid "Stripe reported an error: %s"
 msgid "Stripe returned an error: {}"
-msgstr "Stripe meldete einen Fehler: %s"
+msgstr "Stripe meldete einen Fehler: {}"
 
 #: pretix/plugins/stripe/views.py:88
 msgid ""
@@ -11452,10 +11416,8 @@ msgstr ""
 "die Einstellungen im Detail anpassen."
 
 #: pretix/plugins/stripe/views.py:237
-#, fuzzy
-#| msgid "Your account has been disabled."
 msgid "Your Stripe account has been disconnected."
-msgstr "Das Benutzerkonto wurde deaktiviert."
+msgstr "Das Stripe-Konto wurde getrennt."
 
 #: pretix/plugins/stripe/views.py:298 pretix/plugins/stripe/views.py:325
 msgid ""
@@ -12356,34 +12318,24 @@ msgid "We successfully received your payment. See below for details."
 msgstr "Wir haben Ihre Zahlung erfolgreich erhalten. Vielen Dank!"
 
 #: pretix/presale/templates/pretixpresale/event/order.html:25
-#, fuzzy
-#| msgid ""
-#| "Please bookmark or save the link to this exact page if you want to "
-#| "download your ticket or change your details later. We also sent you an "
-#| "email containing the link to the address you specified."
 msgid ""
 "Please bookmark or save the link to this exact page if you want to access "
 "your order later. We also sent you an email containing the link to the "
 "address you specified."
 msgstr ""
-"Bitte speichern Sie den Link zu genau dieser Seite, wenn Sie Ihr Ticket "
-"später herunterladen oder Ihre Angaben ändern wollen. Wir haben Ihnen "
+"Bitte speichern Sie den Link zu genau dieser Seite, wenn Sie später auf Ihre "
+"Bestellung zugreifen oder Ihre Angaben ändern wollen. Wir haben Ihnen "
 "außerdem soeben einen Link mit dieser Adresse an Ihre E-Mail-Adresse "
 "geschickt."
 
 #: pretix/presale/templates/pretixpresale/event/order.html:28
-#, fuzzy
-#| msgid ""
-#| "Please save the following link if you want to download your ticket or "
-#| "change your details later. We also sent you an email containing the link "
-#| "to the address you specified."
 msgid ""
 "Please save the following link if you want to access your order later. We "
 "also sent you an email containing the link to the address you specified."
 msgstr ""
-"Bitte speichern Sie folgenden Link ab, wenn Sie Ihr Ticket später "
-"herunterladen oder Ihre Angaben ändern wollen. Wir haben Ihnen außerdem "
-"soeben einen Link mit dieser Adresse an Ihre E-Mail-Adresse geschickt."
+"Bitte speichern Sie folgenden Link ab, wenn Sie später auf Ihre Bestellung "
+"zugreifen oder Ihre Angaben ändern wollen. Wir haben Ihnen außerdem soeben "
+"einen Link mit dieser Adresse an Ihre E-Mail-Adresse geschickt."
 
 #: pretix/presale/templates/pretixpresale/event/order.html:50
 msgid "Use different payment method"
