--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-26 20:16+0000\n"
-"PO-Revision-Date: 2018-03-26 20:50+0000\n"
+"PO-Revision-Date: 2018-03-26 21:06+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
@@ -6835,7 +6835,7 @@ msgid ""
 "the payment methods that fit your workflow best. Here are just two of them "
 "as examples, you can add more in the \"Settings\" part of your event."
 msgstr ""
-"Pretix unterstützt <a href=\"https://pretix.eu/about/de/features/payment\" "
+"pretix unterstützt <a href=\"https://pretix.eu/about/de/features/payment\" "
 "target=\"_blank\">eine breite Auswahl an Zahlungsanbietern</a>, aus denen "
 "Sie frei wählen können. Hier sind nur zwei Beispiele aufgeführt, weitere "
 "finden Sie unter dem Menüpunkt \"Einstellungen\" unter \"Zahlung\"."
